# sv_align

./: CMakeLists.txt  README.md
data/: Assembly-BothStrands_3548768-2173486-464300_r20.gfa  HG00733_chr14_85915451_haps_vs_shasta_asm.gam.raw.bgz  test.fasta  test.vcf
inc/: BinaryIO.hpp  BubbleChain.hpp  FastaReaderLite.hpp  GFAReader.hpp  VCFReader.hpp
scripts/: test_gfa_overlaps.py
src/: BinaryIO.cpp  BubbleChain.cpp  FastaReaderLite.cpp  GFAReader.cpp  VCFReader.cpp
src/executables/: extract_bubble_chains_from_gfa.cpp  generate_haploblocks_from_vcf.cpp  measure_sv_sensitivity.cpp
src/test/: test_FastaReaderLite.cpp  test_GFAReader.cpp  test_VCFReader.cpp  test_VGio.cpp
